<resources>
    <string name="app_name">TimePill</string>
    <string name="name">tablle</string>
    <string name="name_address">sample@tablle.com</string>
    <string name="home">首页</string>
    <string name="my_concern">我的关注</string>
    <string name="concern_me">关注我的</string>
    <string name="my_notebook">我的日记本</string>
    <string name="my_profile">关于我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="person_name">孙骁骁</string>
    <string name="person_title">演员</string>
    <string name="person_intro">
        孙骁骁，1985年4月22日出生于重庆渝中区，主持人、演员，毕业于中国传媒大学播音与主持专业04级本科班。
        2007年进入湖南娱乐频道，主持娱乐节目《娱乐急先锋》。在《挑战麦克风》、《节节高声》、《快乐女声》等众多节目担任主持。
        2010年与马天宇主演《宝贝妈妈宝贝女》。2011年与郑恺、魏巍主演《我的青春在延安》。
        2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，2013年9月28日与张翰、郑爽主演《胜女的代价2》 。
        2015年5月11日，李响单膝跪地求婚孙骁骁，孙骁骁飙泪点头。
        演绎经历:
        2007年4月底，孙骁骁通过湖南电视台娱乐频道在中国传媒大学的招聘并往长沙进行复试。通过复试后孙骁骁开始主持娱乐资讯类节目《娱乐急先锋》。
        2008年11月，孙骁骁接到了一个内部电话，这个电话来自湖南卫视演艺事业部，对方询问她是否愿意到湖南卫视做一档新节目。这档节目，就是《挑战麦克风》。《挑战麦克风》选中孙骁骁和马可、李好搭档，其实是看中了她的麦霸功底。
        2009年3月2日，在湖南卫视正式开播的《节节高声》栏目由孙骁骁和曹颖搭档。2009年03月12日，湖南卫视《挑战麦克风》第二季启播暨节目模式外销签约仪式在湖南国际影视会展中心举办。
        2011年6月，由孙骁骁、郑恺等主演的红色青春偶像剧《我的青春在延安》正式上映，献礼建党90周年。
        2013年10月20日，由欢瑞世纪出品，明道工作室制作，孙骁骁、张翰、郑爽、乔任梁、江语晨等主演的电视剧《胜女的代价2》在湖南卫视第一周播剧场收官。2013年12月6日由林心如、袁弘、孙骁骁等主演的古装巨制《秀丽江山之长歌行》杀青。同年与黄宗泽、戚薇等主演《少年神探狄仁杰》。
        2015年，主演《新济公活佛》中的单元剧《驭夫环》。</string>

</resources>
